--- a/src/Admin/AdminUsers.scss
+++ b/src/Admin/AdminUsers.scss
@@ -1,7 +1,4 @@
 .admin__users__header {
     background-color: lightgray;
-    display: flex;
-    flex-flow: row;
-    justify-content: space-evenly;
     text-align: center;
 }
